--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -139,6 +139,23 @@
 \label{intro}
 Humans reason about space on a qualitative level, this means we think about our environment in (qualitative) terms such as, "the elm tree is next-to the house", instead of (quantitative) terms like, "the exterior part of the elm tree is 4.54 meters away from the exterior part of the house". The main distinction between the two is based on the level of spatial abstraction; qualitative represents a high level while quantitative represent a low level of abstraction. Our natural cognitive intuition to use qualitative instead of quantitative is the crux of how humans efficiently and effectively represent and reason about our spatial environments and is the topic of much research \cite{freksa1991qsr} \cite{Cohn:2001:QSR}.
 
+%The domain of architectural design is quite interesting in this respect because it relies on both aspects of space: qualitative and quantitative. In the architectural design literature \cite{} this distinction is commonly reffed to as \emph{form} and \emph{function}, in which the common phrase goes "\emph{form follows function}" \cite{formfunction}. In general, the context of this phrase supports the doctrine that the form (structure) should be determined by its function (purpose). For decades there has been a plethora of debate on the interpretation of these claims and its validity with a practical design context. For the purposes here the focus is not on the philosophy of design or any argument about the validity of such claims, but is an introduction to the idea that architectural design is inherently defined by and intertwined with the qualitative and quantitative aspects of space.
+
+%Research that supports this perspective on design and space, address many design problems as they occur during the lifetime of an architectural design project, such as: design conceptualization, geometric modeling, structural consistency \& code checking, and many others \cite{Bayazit} \cite{bhatt-spatial-computing}. However, most research in this area unfortunately tends to focus on one aspect of space or the other but not both, i.e. quantitative but not qualitative or qualitative but not quantitative. For example, structural consistency \& code checking \cite{} involves the process of validating an architectural design against constraints on the quantitative geometric structures of the design, while design conceptualization involve modeling the basic spaces / zones of the architectural design from a qualitative perspective. 
+
+%The tendency to focus on one aspect of space is especially true for state-of-the-art CAAD programs. This happens because CAAD programs provide an environment for architects to build a precise schematization of an architectural design with the purpose of using it as a blueprint during the design's realization. In essence, this means that there needs to be a direct and one-to-one correlation between the schematization of the design as defined by its representation of space and the design's physical manifestation in the real world. Consequently, CAAD programs represent the spatial features of a design, with respect to the individual elements that make up the design, from a perspective that captures its precise geometric form, i.e. the size, shape, location, and placement.
+
+%This type of representation serves its purpose well (building a design in the real world) and can provides for some types of spatial reasoning over it, such as geometric reasoning (i.e. properties of angles, shapes, sizes, parallelism, etc.) and checking for higher level requirements, such as the load bearing capacity of building elements and structural integrity. However, the second form of reasoning requires additional knowledge (building materials and load barring properties) that go beyond the semantics of the design's spatial quantities. In this regard, the CAAD based representation makes it difficult to reason about aspects of the design from a conceptual level, i.e. the semantics that involve the design's function or purpose. The difficulty emerges in this regard because the conceptual aspects of a design define its abstract features while the CAAD based representation is grounded to a concrete and spatially general form that lacks the semantic at the conceptual level. In other words, there is a \emph{semantic gap} between the conceptual aspects of the design and it's CAAD based representation that is separated by the different levels of abstraction for each.
+
+%This is where this thesis hopes to provide it contribution, by providing a framework that bridges the gap between a design's conceptualizations to it's precise geometric underpinnings.  
+
+%construct a designs in a manner that directly corresponds to the realization of the design and therefore requires a precise representation of space. This type of representation needs to know about many aspects of a designs spatial features including the size, shape, dimensions, placement, and location of the individual elements that make up the building.   
+
+%To make this possible, architectural designs are represented based on their structural form in a manner that captures its spatial properties precisely. This type of representation captures the design, in terms of the spatial features, spatial dimensions of architectural entities, placement of entities within the building, at a low-level of granularity that is needed in the actual construction of the building, and allows for reasoning about the physical, structural and mechanical aspects of a design with regard to the precise geometric representation; such as the placement of a door in a wall or the mechanics of a window swinging open and closed. TODO: talk about x,y,z coordinates of real space, quantitative representation.
+
+%However, this type of representation scheme does not incorporation the qualitative and functional features of the design. For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. For a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to qualitative spatial design features and functional attributes that go beyond the purely geometric representation of the design, i.e., in this case the qualitative spatial relationship between a window and doorway.
+
+
 
 
 \chapter{Background and Related Work} 
@@ -306,10 +323,13 @@ The CRR is a framework for validating conceptual design requirements against CAA
 The goal of the CRR is to build a computational framework that represents and reasons about design requirements in the context of conceptual design requirement validation.     
 
 \section{Design Problem}
+The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function (i.e., architectural design) from multiple levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. The semantics of the conceptual level included high level architectural concepts and features such as continuity, enclosure, privacy, and visibility, and spatial qualities of orientation, positioning, and proximity, while the semantics at the quantitative level use general spatial primitives of polygons, lines, and points. These three levels of the design hierarchy are connected to each other because abstract conceptual features emerge from specific low level spatial spatial design patterns at the quantitative level. 
 
-The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function from several levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. At the conceptual level an architectural design can be described based on high level experiential features such as continuity, enclosure, privacy, and visibility and spatial qualities of orientation, positioning, and proximity. The various levels of the design abstraction are connected because high level conceptual features emerge from and are defined by specific low level spatial characteristics of the structural form. For example, the visibility characteristics of a design, with respect to objects being visible or not-visible, is grounded to the specific (quantitative) spatial geometries of the buildings. 
+Take for example the architectural concept of spaciousness. At the conceptual level, spaciousness conveys an experiential quality of the design such as the feeling of openness. Such experiential qualities emerge from of the specific spatial patterns of the architectural elements that make up the physical building. In other words, the location of architectural entities such as walls, ceilings, windows, and doors, and the size and shape of rooms directly affect the experiential quality of openness. In general, changes in the spatial patterns at the quantitative level affect the experiential qualities of the design.  
 
-Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} are based on spatial representations that are quantitative and lack the capability to provide design assistance to architects at a conceptual level. This type of a computational environment is well suited for certain purposes, such as a designing a schematization that can be used as a blueprint for the realization of the design, but it does not support reasoning at a higher level of abstraction. For example, the tasks an architect might face during the design conceptualization phase of a museum include, amount other things, defining high level functional and aesthetic requirements of the museum's design, such as the following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplify:
+%For example, the visibility characteristics of a design, with respect to objects being visible or not-visible, is grounded to the specific (quantitative) spatial geometries of the buildings. 
+
+Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} are based on spatial representations that are quantitative and lack the capability to provide design assistance to architects at a conceptual level. This type of a computational environment is well suited for certain purposes, such as a designing a schematization that can be used as a blueprint for the realization of the design, but it does not support reasoning at a higher level of abstraction. For example, the tasks an architect might face during the design conceptualization phase of a museum include, among other things, defining high level functional and aesthetic requirements of the museum's design, such as the following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplify:
 \begin{quote}
 \emph{``The current topographic conditions of the site, where the larger trees are located in an area that is more elevated than the whole northern rim of the plot, made it possible to install a huge underground floor in the already existing depression, whose covering creates a gentle artificial elevation that perspectively accentuates and enhances the whole architectural composition. The distribution of the construction volumes fundamentally followed a desire for horizontality, allowing one to read the continuity of the green space beyond the construction and in all directions.''}
 \end{quote}
@@ -318,39 +338,38 @@ Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{Auto
 \end{quote}
 Environmental aspects of the museums design, such as these, encompass high level spatial design patterns that emerge from the structural form of the building at the quantitative level \cite{carl}. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level through spatial patterns at the qualitative level.
 
-
-Reasoning at a high level of abstraction requires the semantics of the underlying representation at a similar level. For example, the semantics of the design representation on the conceptual level involve abstract spatial entities such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. However, the spatial representation semantics of current CAAD programs are based on geometric spatial primitives of of points, lines, and polygons which do not represent the design on a level that is necessary for high level conceptual reasoning. 
+Reasoning at a high level of abstraction requires the semantics of the underlying representation at a similar level. In this regard, the semantics of the design representation on the conceptual level involve abstract spatial entities such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. However, the spatial representation semantics of current CAAD programs are based on geometric spatial primitives of of points, lines, and polygons which do not represent the design on a level that is necessary for high level conceptual reasoning.  For example, it is possible to reason about the geometric properties of a design in terms of the size, shape, and location of architectural entities given a CAAD-based representation of space. At this level of reasoning, the semantic of the reasoner and the representation of the architectural design are both ground to the same level of abstraction, namely the quantitative space. Unfortunately, reasoning at more abstract levels, those involving conceptual design semantics such as visibility, continuity, and enclosure, or spatial qualities such as facing, across-from, and near-to, breaks down because there is a \emph{semantic gap} between the levels of abstraction of the reasoning queries with the unerdlying representation.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=100mm]{multi-perspective-reps}
+\includegraphics[width=90mm]{multi-perspective-reps}
 \caption{Architectural Levels of Abstraction - Source \cite{bhatt-spatial-computing}}
 \label{multi-perspective-reps}
 \end{figure}
 
-The objective of this thesis is an initial step at building a framework that bridges the gap between the quantitative representation of a design in the context of a CAAD based system to the conceptual specifications of the design. Specifically, the framework focuses on supporting a designer by validating conceptual requirements against a work-in-progress design built in a CAAD program. 
 
 
+\section{Thesis Approach and Main Contributions}
+%The main problem being addressed in this thesis is how to validate conceptual design requirements in a practical design workflow involving a CAAD based design representation. As discussed in the previous section, designs are represented quantitatively in CAAD based systems using spatial primitives of point, lines, and polygons that do not incorporate the semantics needed for reasoning at higher levels of abstraction, such as conceptual requirements validation.   
 
-%The domain of architectural design is quite interesting in this respect because it relies on both aspects of space: qualitative and quantitative. In the architectural design literature \cite{} this distinction is commonly reffed to as \emph{form} and \emph{function}, in which the common phrase goes "\emph{form follows function}" \cite{formfunction}. In general, the context of this phrase supports the doctrine that the form (structure) should be determined by its function (purpose). For decades there has been a plethora of debate on the interpretation of these claims and its validity with a practical design context. For the purposes here the focus is not on the philosophy of design or any argument about the validity of such claims, but is an introduction to the idea that architectural design is inherently defined by and intertwined with the qualitative and quantitative aspects of space.
+The objective of this thesis is an initial step at building a framework, referred to as the Conceptual Requirements Reasoning or CRR, which bridges the gap between the quantitative representation of a design in the context of a CAAD based system to the conceptual specifications of the design. Specifically, CRR focuses on supporting a designer by validating conceptual requirements against a work-in-progress design built in a and represented through a CAAD based system. 
 
-%Research that supports this perspective on design and space, address many design problems as they occur during the lifetime of an architectural design project, such as: design conceptualization, geometric modeling, structural consistency \& code checking, and many others \cite{Bayazit} \cite{bhatt-spatial-computing}. However, most research in this area unfortunately tends to focus on one aspect of space or the other but not both, i.e. quantitative but not qualitative or qualitative but not quantitative. For example, structural consistency \& code checking \cite{} involves the process of validating an architectural design against constraints on the quantitative geometric structures of the design, while design conceptualization involve modeling the basic spaces / zones of the architectural design from a qualitative perspective. 
+Given the need to bridge the gap between the conceptual and the quantitative levels of the design hierarchy in this context the following issues have been identified as crucial:
+\begin{itemize}
+\item the identification, formal modeling, and spatial interpretation of architectural concepts and spatial qualities 
+\item the spatial abstraction of CAAD-based geometric primitives, and
+\item the mapping of conceptual requirement to qualitative spatial design patterns 
+\end{itemize}
 
-%The tendency to focus on one aspect of space is especially true for state-of-the-art CAAD programs. This happens because CAAD programs provide an environment for architects to build a precise schematization of an architectural design with the purpose of using it as a blueprint during the design's realization. In essence, this means that there needs to be a direct and one-to-one correlation between the schematization of the design as defined by its representation of space and the design's physical manifestation in the real world. Consequently, CAAD programs represent the spatial features of a design, with respect to the individual elements that make up the design, from a perspective that captures its precise geometric form, i.e. the size, shape, location, and placement.
-
-%This type of representation serves its purpose well (building a design in the real world) and can provides for some types of spatial reasoning over it, such as geometric reasoning (i.e. properties of angles, shapes, sizes, parallelism, etc.) and checking for higher level requirements, such as the load bearing capacity of building elements and structural integrity. However, the second form of reasoning requires additional knowledge (building materials and load barring properties) that go beyond the semantics of the design's spatial quantities. In this regard, the CAAD based representation makes it difficult to reason about aspects of the design from a conceptual level, i.e. the semantics that involve the design's function or purpose. The difficulty emerges in this regard because the conceptual aspects of a design define its abstract features while the CAAD based representation is grounded to a concrete and spatially general form that lacks the semantic at the conceptual level. In other words, there is a \emph{semantic gap} between the conceptual aspects of the design and it's CAAD based representation that is separated by the different levels of abstraction for each.
-
-%This is where this thesis hopes to provide it contribution, by providing a framework that bridges the gap between a design's conceptualizations to it's precise geometric underpinnings.  
-
-%construct a designs in a manner that directly corresponds to the realization of the design and therefore requires a precise representation of space. This type of representation needs to know about many aspects of a designs spatial features including the size, shape, dimensions, placement, and location of the individual elements that make up the building.   
-
-%To make this possible, architectural designs are represented based on their structural form in a manner that captures its spatial properties precisely. This type of representation captures the design, in terms of the spatial features, spatial dimensions of architectural entities, placement of entities within the building, at a low-level of granularity that is needed in the actual construction of the building, and allows for reasoning about the physical, structural and mechanical aspects of a design with regard to the precise geometric representation; such as the placement of a door in a wall or the mechanics of a window swinging open and closed. TODO: talk about x,y,z coordinates of real space, quantitative representation.
-
-%However, this type of representation scheme does not incorporation the qualitative and functional features of the design. For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. For a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to qualitative spatial design features and functional attributes that go beyond the purely geometric representation of the design, i.e., in this case the qualitative spatial relationship between a window and doorway.
+To address these issues, this thesis follows the approaches introduced by Bhatt and Freksa \cite{bhatt-spatial-computing}, with regards to Spatial Computing for Architectural Design, by following the design space hierarchy as illustrated in Figure \ref{multi-perspective-reps}, to implement a framework for validating conceptual requirements against a work-in-progress design. The main contributions in this respect are:
+\begin{itemize}
+\item the implementation of a framework that validates conceptual design requirements against work-in-progress architectural designs
+\item the development of a multi-hierarchy that maps architectural concepts at the conceptual level to spatial patterns in the quantitative level
+\item the use of formal qualitative spatial representation and reasoning techniques to bridge the gap between each level of the design hierarchy
+\end{itemize}
 
 
-\section{Approach}
-  - main problem: how to go from high level conceptualization of a design to low level quantitative level
+%  - main problem: how to go from high level conceptualization of a design to low level quantitative level
   - solution: use intermediate spatial level: i.e. qualitative space
   	  - Break down design / architectural domain into spatial / design hierarchy
          - design space
@@ -367,6 +386,17 @@ This representation allows an architect to validate a work-in-progress design fr
 
  The crux of this is that it bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
 
+
+The design multi-hierarchy developed in this section is built on the mapping of the design problem into a design space, a quality space, and a quantity space. At the highest level, the design space involves the architectural design semantics (architectural concepts) and qualities (qualitative spatial attributes found in architecture) that emerge in architecture. At the lowest level, the quantitative space involves the precise geometries of the architectural structures found in the design. The qualitative space mediates between the abstractions of the design layer and the concreteness of the quantitative later using qualitative spatial representation and reasoning.
+ 
+\begin{figure}[H]
+\centering
+\includegraphics[width=140mm]{spatial-qualities-hierarchy}
+\caption{Design Space Multi-Hierarchy}
+\label{hierarchy}
+\end{figure}
+
+Figure \ref{hierarchy} shows the design multi-hierarchy used in the DSpace reasoner. Conceptual design requirements are built from the architectural concepts and qualitative spatial attributes found in architecture (QSA) of the highest level of the multi-hierarchy. Within the multi-hierarchy, architectural concepts are built using QSA, but are not limited to only these, spatial relationships of orientation, topology, and distance can be used, as well as other geometric primitives such as area, angle, and length measurements. QSA are defined by the qualitative spatial relationships of orientation, topology, and distance. These qualitative spatial relationships emerge from the quantitative, physical, and artefactual geometries of the the design. TBD: physical structures define the way the architecture is experiences and influences the functional / performance of the design from a conceptual design perspective. 
 
 
 
@@ -387,17 +417,6 @@ This representation allows an architect to validate a work-in-progress design fr
       - declarative framework / clp
       - details will be discussed in subsequent chapters
 
-\subsection{Multi-Hierarchy}
-The design multi-hierarchy developed in this section is built on the mapping of the design problem into a design space, a quality space, and a quantity space. At the highest level, the design space involves the architectural design semantics (architectural concepts) and qualities (qualitative spatial attributes found in architecture) that emerge in architecture. At the lowest level, the quantitative space involves the precise geometries of the architectural structures found in the design. The qualitative space mediates between the abstractions of the design layer and the concreteness of the quantitative later using qualitative spatial representation and reasoning.
- 
-\begin{figure}[H]
-\centering
-\includegraphics[width=140mm]{spatial-qualities-hierarchy}
-\caption{Design Space Multi-Hierarchy}
-\label{hierarchy}
-\end{figure}
-
-Figure \ref{hierarchy} shows the design multi-hierarchy used in the DSpace reasoner. Conceptual design requirements are built from the architectural concepts and qualitative spatial attributes found in architecture (QSA) of the highest level of the multi-hierarchy. Within the multi-hierarchy, architectural concepts are built using QSA, but are not limited to only these, spatial relationships of orientation, topology, and distance can be used, as well as other geometric primitives such as area, angle, and length measurements. QSA are defined by the qualitative spatial relationships of orientation, topology, and distance. These qualitative spatial relationships emerge from the quantitative, physical, and artefactual geometries of the the design. TBD: physical structures define the way the architecture is experiences and influences the functional / performance of the design from a conceptual design perspective. 
 
 
 \begin{figure}[H]
