--- a/thesis.bib
+++ b/thesis.bib
@@ -11,7 +11,7 @@
     year = {1991}
 }
 
-@article{bhattSpatialComputing,
+@article{bhatt-spatial-computing,
     author = {Bhatt, M. and Freksa, C.},
     journal = {SF International Workshop on Studying Visual and Spatial Reasoning for Design Creativity SDC'10},
     title = {{Spatial Computing for Design: An Artificial Intelligence Perspective}},
@@ -234,3 +234,12 @@ author = "Louis Sullivan"
  address = {New York, NY, USA},
 }
 
+@article{Bayazit,
+    author = {Bayazit­, Nigan},
+    journal = {Design Issues},
+    pages = {16--29},
+    publisher = {MIT Press},
+    title = {{Investigating Design: A Review of Forty Years of Design Research}},
+    volume = {20},
+    year = {2004}
+}
