--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -323,22 +323,26 @@ The CRR is a framework for validating conceptual design requirements against CAA
 The goal of the CRR is to build a computational framework that represents and reasons about design requirements in the context of conceptual design requirement validation.     
 
 \section{Design Problem}
-The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function (i.e., architectural design) from multiple levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. The semantics of the conceptual level included high level architectural concepts and features such as continuity, enclosure, privacy, and visibility, and spatial qualities of orientation, positioning, and proximity, while the semantics at the quantitative level use general spatial primitives of polygons, lines, and points. These three levels of the design hierarchy are connected to each other because abstract conceptual features emerge from specific low level spatial spatial design patterns at the quantitative level. 
+The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function (i.e., architectural design) from multiple levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. The semantics of the conceptual level included high level architectural concepts and features such as continuity, enclosure, privacy, and visibility, and spatial qualities of orientation, positioning, and proximity, while the semantics at the quantitative level use general spatial primitives of polygons, lines, and points. The qualitative intermediate layer involves qualitative spatial representation and reasoning. The three levels of the design hierarchy are connected to each other because abstract conceptual features emerge from specific low level spatial spatial design patterns at the quantitative level. 
 
-Take for example the architectural concept of spaciousness. At the conceptual level, spaciousness conveys an experiential quality of the design such as the feeling of openness. Such experiential qualities emerge from of the specific spatial patterns of the architectural elements that make up the physical building. In other words, the location of architectural entities such as walls, ceilings, windows, and doors, and the size and shape of rooms directly affect the experiential quality of openness. In general, changes in the spatial patterns at the quantitative level affect the experiential qualities of the design.  
+Take for example the architectural concept of spaciousness. At the conceptual level, spaciousness conveys an experiential quality of the design such as the feeling of openness. Such experiential qualities emerge from of the specific spatial patterns of the architectural elements that make up the building's physical form. In other words, the location of architectural entities such as walls, ceilings, windows, and doors, and the size and shape of rooms directly affect the experiential quality of openness. In general, changes in the spatial patterns at the quantitative level affect the experiential qualities of the design at the conceptual level.  
 
-%For example, the visibility characteristics of a design, with respect to objects being visible or not-visible, is grounded to the specific (quantitative) spatial geometries of the buildings. 
+Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} are incapable of reasoning at a conceptual level. This happens because the CAAD-based design representation is primarily encapsulated on the quantitative level of the design hierarchy, which lacks the semantics necessary for reasoning at higher levels of abstraction. While CAAD-based design representation is well suited for certain design phases, such as designing a schematization that will be used as a blueprint for the realization of the design, it does not support other architectural design processes that require reasoning at a higher level of abstraction, such as design conceptualization, requirements reasoning and functional specification to name a few \cite{bhatt-spatial-computing}. 
 
-Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} are based on spatial representations that are quantitative and lack the capability to provide design assistance to architects at a conceptual level. This type of a computational environment is well suited for certain purposes, such as a designing a schematization that can be used as a blueprint for the realization of the design, but it does not support reasoning at a higher level of abstraction. For example, the tasks an architect might face during the design conceptualization phase of a museum include, among other things, defining high level functional and aesthetic requirements of the museum's design, such as the following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplify:
+Take for example, the tasks an architect might face during the design conceptualization phase of a museum include, among other things, defining high level functional and aesthetic requirements of the museum's design, such as the following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplify:
 \begin{quote}
 \emph{``The current topographic conditions of the site, where the larger trees are located in an area that is more elevated than the whole northern rim of the plot, made it possible to install a huge underground floor in the already existing depression, whose covering creates a gentle artificial elevation that perspectively accentuates and enhances the whole architectural composition. The distribution of the construction volumes fundamentally followed a desire for horizontality, allowing one to read the continuity of the green space beyond the construction and in all directions.''}
 \end{quote}
 \begin{quote}
 \emph{``This sober, rational and markedly horizontal structure is distinctive for its laminar exterior, its modular repetition, austere design and the hard quality of the materials which shape it, concrete and glass.''}
 \end{quote}
-Environmental aspects of the museums design, such as these, encompass high level spatial design patterns that emerge from the structural form of the building at the quantitative level \cite{carl}. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level through spatial patterns at the qualitative level.
+Environmental aspects of the museums design, such as these, encompass high level spatial design patterns that are grounded to the structural form of the building at the quantitative level \cite{carl}. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level via spatial patterns on the qualitative level.
 
-Reasoning at a high level of abstraction requires the semantics of the underlying representation at a similar level. In this regard, the semantics of the design representation on the conceptual level involve abstract spatial entities such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. However, the spatial representation semantics of current CAAD programs are based on geometric spatial primitives of of points, lines, and polygons which do not represent the design on a level that is necessary for high level conceptual reasoning.  For example, it is possible to reason about the geometric properties of a design in terms of the size, shape, and location of architectural entities given a CAAD-based representation of space. At this level of reasoning, the semantic of the reasoner and the representation of the architectural design are both ground to the same level of abstraction, namely the quantitative space. Unfortunately, reasoning at more abstract levels, those involving conceptual design semantics such as visibility, continuity, and enclosure, or spatial qualities such as facing, across-from, and near-to, breaks down because there is a \emph{semantic gap} between the levels of abstraction of the reasoning queries with the unerdlying representation.
+Design reasoning at a high level of abstraction requires the underlying representation semantics at the same level of abstraction. In this regard, the design semantics required of the underlying representation model at the conceptual level involve abstract abstractions such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. Conversely, the underlying representational semantics of current CAAD-based system are based on the semantics of general geometric primitives such as points, lines, and polygons. 
+
+These general spatial semantics do not represent the design on a level that is necessary for high level conceptual reasoning.  For example, it is possible to reason about the geometric properties of a design in terms of the size, shape, and location of architectural entities given the CAAD-based representation semantics of space. At this level of reasoning, the reasoner and the underlying representational model are both ground to the same level of abstraction, namely the quantitative semantics of polygon, lines and points. 
+
+Unfortunately, reasoning at more abstract levels, involving conceptual design semantics such as visibility, continuity, and enclosure, or spatial qualities such as facing, across-from, and near-to, breaks down because there is a \emph{semantic gap} between the levels of abstraction of the reasoning queries with the unerdlying representation.
 
 \begin{figure}[H]
 \centering
@@ -346,7 +350,6 @@ Reasoning at a high level of abstraction requires the semantics of the underlyin
 \caption{Architectural Levels of Abstraction - Source \cite{bhatt-spatial-computing}}
 \label{multi-perspective-reps}
 \end{figure}
-
 
 
 \section{Thesis Approach and Main Contributions}
