--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -338,11 +338,15 @@ Take for example, the tasks an architect might face during the design conceptual
 \end{quote}
 Environmental aspects of the museums design, such as these, encompass high level spatial design patterns that are grounded to the structural form of the building at the quantitative level \cite{carl}. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level via spatial patterns on the qualitative level.
 
-Design reasoning at a high level of abstraction requires the underlying representation semantics at the same level of abstraction. In this regard, the design semantics required of the underlying representation model at the conceptual level involve abstract abstractions such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. Conversely, the underlying representational semantics of current CAAD-based system are based on the semantics of general geometric primitives such as points, lines, and polygons. 
+Design reasoning at a high level of abstraction requires the underlying representational semantics at the same level of abstraction. In this regard, the design semantics at the conceptual level involve abstractions such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. Conversely, the underlying representational semantics of current CAAD-based system are based on the semantics of more general and lower level geometric primitives such as points, lines, and polygons. 
 
-These general spatial semantics do not represent the design on a level that is necessary for high level conceptual reasoning.  For example, it is possible to reason about the geometric properties of a design in terms of the size, shape, and location of architectural entities given the CAAD-based representation semantics of space. At this level of reasoning, the reasoner and the underlying representational model are both ground to the same level of abstraction, namely the quantitative semantics of polygon, lines and points. 
+The design semantics at the quantitative level do not represent the design at a level of abstraction that is need to reason at a conceptual level. Where as an architect might conceptualize the design of a museum in terms such as \emph{galleries} and the relative placement of objects with each gallery, e.g., ``the statue is on the \emph{left-hand-side} of the gallery as one enters from the main doors'', the process of building the museum in a CAAD-based tool is restricted to the representation of the design in terms of it's geometric characteristics. The \emph{semantic gap} exemplified here, is the crux of the issues being addressed in this thesis. 
 
-Unfortunately, reasoning at more abstract levels, involving conceptual design semantics such as visibility, continuity, and enclosure, or spatial qualities such as facing, across-from, and near-to, breaks down because there is a \emph{semantic gap} between the levels of abstraction of the reasoning queries with the unerdlying representation.
+The following section introduces the scope of this thesis by narrowing it to focus on conceptual requirements reasoning, it outlines the approaches taken towards this goal, and presents the thesis's main contributions. 
+
+%For example, it is possible to reason about the geometric properties of a design in terms of the size, shape, and location of architectural entities given the CAAD-based representation semantics of space. At this level of reasoning, the reasoner and the underlying representational model are both ground to the same level of abstraction, namely the quantitative semantics of polygon, lines and points. 
+
+%Unfortunately, reasoning at more abstract levels, involving conceptual design semantics such as visibility, continuity, and enclosure, or spatial qualities such as facing, across-from, and near-to, breaks down because there is a \emph{semantic gap} between the levels of abstraction of the reasoning queries with the underlying representation.
 
 \begin{figure}[H]
 \centering
@@ -355,7 +359,7 @@ Unfortunately, reasoning at more abstract levels, involving conceptual design se
 \section{Thesis Approach and Main Contributions}
 %The main problem being addressed in this thesis is how to validate conceptual design requirements in a practical design workflow involving a CAAD based design representation. As discussed in the previous section, designs are represented quantitatively in CAAD based systems using spatial primitives of point, lines, and polygons that do not incorporate the semantics needed for reasoning at higher levels of abstraction, such as conceptual requirements validation.   
 
-The objective of this thesis is an initial step at building a framework, referred to as the Conceptual Requirements Reasoning or CRR, which bridges the gap between the quantitative representation of a design in the context of a CAAD based system to the conceptual specifications of the design. Specifically, CRR focuses on supporting a designer by validating conceptual requirements against a work-in-progress design built in a and represented through a CAAD based system. 
+The objective of this thesis is an initial step at building a framework which bridges the gap between the quantitative representation of a design (i.e., CAAD-based representation model) to the design's conceptual requirements. Specifically, the framework focuses on supporting a designer by validating conceptual requirements against a work-in-progress design from a CAAD-based system. The framework built for this thesis is referred to as the Conceptual Requirements Reasoner or CRR.
 
 Given the need to bridge the gap between the conceptual and the quantitative levels of the design hierarchy in this context the following issues have been identified as crucial:
 \begin{itemize}
@@ -371,25 +375,33 @@ To address these issues, this thesis follows the approaches introduced by Bhatt 
 \item the use of formal qualitative spatial representation and reasoning techniques to bridge the gap between each level of the design hierarchy
 \end{itemize}
 
+From a user perspective, the CRR provides a designer with design assistance for a work-in-progress design. The CRR does this through a query engine that allows a designer to validate conceptual requirements. For example, a designer is provided with a set of pre-defined architectural concepts, such as continuity, privacy, visibility, and enclosure, and spatial qualities found in architectural, such as orientation, proximity, positioning, and sequencing, which he or she can use to construct queries to the CRR. For example if a designer wants to check if a door and window are facing each other (as might be a requirement for air circulation purposes) the designer can simply makes the following query to the CRR:
+\begin{verbatim}
+    ?- facing(door, window).
+\end{verbatim} The CRR will respond to the query with a \emph{true} if they are facing and \emph{fail} if they are not. 
+
 
 %  - main problem: how to go from high level conceptualization of a design to low level quantitative level
-  - solution: use intermediate spatial level: i.e. qualitative space
-  	  - Break down design / architectural domain into spatial / design hierarchy
-         - design space
-         - quality space
-         - quantity space
-         + each level of hierarchy is responsible for a level of abstraction
-         + mapping between each level bridges gap between concept and quantity
-         	- design to quality downward connected via spatial definition (interpretation) of design concept into qualitative spatial relationships
-         	- quality to quantity upward connection via qualification
-         + complexity of spatial reasoning / representation of design is hidden from architect
+%  - solution: use intermediate spatial level: i.e. qualitative space
+%  	  - Break down design / architectural domain into spatial / design hierarchy
+%         - design space
+%         - quality space
+%         - quantity space
+%         + each level of hierarchy is responsible for a level of abstraction
+%         + mapping between each level bridges gap between concept and quantity
+%         	- design to quality downward connected via spatial definition (interpretation) of design concept into qualitative spatial relationships
+%         	- quality to quantity upward connection via qualification
+%         + complexity of spatial reasoning / representation of design is hidden from architect
       
       
-This representation allows an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
+%This representation allows an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
 
- The crux of this is that it bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
+%The crux of this is that it bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
 
 
+
+
+\section{High Level Design of the CRR}
 The design multi-hierarchy developed in this section is built on the mapping of the design problem into a design space, a quality space, and a quantity space. At the highest level, the design space involves the architectural design semantics (architectural concepts) and qualities (qualitative spatial attributes found in architecture) that emerge in architecture. At the lowest level, the quantitative space involves the precise geometries of the architectural structures found in the design. The qualitative space mediates between the abstractions of the design layer and the concreteness of the quantitative later using qualitative spatial representation and reasoning.
  
 \begin{figure}[H]
@@ -402,8 +414,6 @@ The design multi-hierarchy developed in this section is built on the mapping of 
 Figure \ref{hierarchy} shows the design multi-hierarchy used in the DSpace reasoner. Conceptual design requirements are built from the architectural concepts and qualitative spatial attributes found in architecture (QSA) of the highest level of the multi-hierarchy. Within the multi-hierarchy, architectural concepts are built using QSA, but are not limited to only these, spatial relationships of orientation, topology, and distance can be used, as well as other geometric primitives such as area, angle, and length measurements. QSA are defined by the qualitative spatial relationships of orientation, topology, and distance. These qualitative spatial relationships emerge from the quantitative, physical, and artefactual geometries of the the design. TBD: physical structures define the way the architecture is experiences and influences the functional / performance of the design from a conceptual design perspective. 
 
 
-
-\section{High Level Design of the CRR}
   - Design
       - based on multi-hierarchy
       - design space
